style(fix-overflowing): Fixed overflowing of select input in some browsers

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
   min-width: 60px;
   background-color: transparent;
   color: rgb(25, 25, 25);
+  padding: 0 20px 0 8px;
   padding-left: 8px;
   margin-left: -1px;
   border: 1px solid rgb(171, 171, 171);
